[package]
name = "ldap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "ldap"
path = "src/main.rs"

[lib]
name = "ldap_commands"
path = "src/lib.rs"

[dependencies]
clap = {version = "3.1.6", features = ["derive"]}
color-eyre = {version = "0.6.1", default-features = false}
directories = "4.0.1"
itertools = "0.10.3"
ldap3 = {version = "0.10.2", default-features = false, features = ["tls-rustls"]}
rpassword = "6.0.1"
rprompt = "1.0.5"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
tokio = {version = "1.17.0", features = ["rt-multi-thread"]}
